Functional coffee eCommerce site

--- a/frontEnd/delivery.html
+++ b/frontEnd/delivery.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container-fluid">
     <div class="row" id="headerColor">
-      <div class="col-md-8"><img src="images/dc-roasters.png" alt="" /></div>
+      <div class="col-md-8"><a href='#/'><img src="images/dc-roasters.png" alt="" /></a></div>
     </div>
     <div class="row" id="headerColor">
       <nav class="navbar navbar-light bg-faded" id="navigation">
@@ -107,6 +107,7 @@
           <input type="submit" name="submit" value="Submit" ng-click="submit3()">
           <br><br>
         </div>
+        <br><br><br><br>
       </div>
 
     </div>
