--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -62,7 +62,7 @@
   </div>
   <div class="row" id="justColorRows">
     <div class="col-md-12" id="footer">
-      <button type="button" name="button">Get Started</button><br>
+      <a href="#/register"><button type="button" name="button">Get Started</button></a><br>
       Want to know more about us?<br>
       <button type="button" name="button">Our Story</button>
     </div>
