--- a/frontEnd/options.html
+++ b/frontEnd/options.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row" id="headerColor">
-    <div class="col-md-12"><img src="images/dc-roasters.png" alt="" /></div>
+    <div class="col-md-12"><a href='#/'><img src="images/dc-roasters.png" alt="" /></a></div>
   </div>
   <div class="row" id="headerColor">
     <nav class="navbar navbar-light bg-faded" id="navigation">
@@ -20,9 +20,11 @@
       </ul>
     </nav>
   </div>
+  <br>
   <div class="row">
     <div class="col-md-12" id="text">Tell us what you want!</div>
   </div>
+  <br>
   <div class="row">
     <div class="col-md-6">
       <div class="loginBox">
@@ -61,6 +63,8 @@
         <input ng-click="submit2(0.90)" type="submit" name="submit" value="Order">
         <br><br>
       </div>
+      <br><br><br><br>
     </div>
+
   </div>
 </div>
