--- a/frontEnd/payment.html
+++ b/frontEnd/payment.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row" id="headerColor">
-    <div class="col-md-8"><img src="images/dc-roasters.png" alt="" /></div>
+    <div class="col-md-8"><a href='#/'><img src="images/dc-roasters.png" alt="" /></a></div>
   </div>
   <div class="row" id="headerColor">
     <nav class="navbar navbar-light bg-faded" id="navigation">
@@ -34,7 +34,7 @@
           </tr>
           <tr>
             <td>Frequency of Delivery</td>
-            <td>-----</td>
+            <td>Monthly</td>
           </tr>
           <tr>
             <td>Coffee in Pounds</td>
@@ -91,6 +91,7 @@
         <input ng-click="pay()" type="submit" name="submit" value="Pay With Credit Card">
         <input ng-click="cancel()" type="submit" name="submit" value="Cancel">
       </div>
+      <br><br><br><br>
     </div>
     <div class="col-md-4"></div>
   </div>
