--- a/frontEnd/register.html
+++ b/frontEnd/register.html
@@ -1,64 +1,49 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Register</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row" id="headerColor">
-        <div class="col-md-8"><img src="images/dc-roasters.png" alt="" /></div>
-        <div class="col-md-4" style="text-align: right;">
-          <br><br>
-          <p>Already have an account?<button type="button" name="button" class="loginButton">LOG IN</button></p>
-
-        </div>
-      </div>
-      <div class="row" id="headerColor">
-        <nav class="navbar navbar-light bg-faded" id="navigation">
-          <ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/#/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#/options">Options</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#/delivery">Delivery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#/payment">Payment</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="row" id="box">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <div class="loginBox">
-            <br><br>
-            <p style="font-size: 2em;">Register</p>
-            <p>____________________</p>
-            <p>Username:</p>
-            <input type="text" name="Username" placeholder="Username"><br>
-            <br><p>Password:</p>
-            <input type="password" name="Password" placeholder="Password"><br><br>
-            <input type="password" name="Password" placeholder="Confirm Password">
-            <br><br>
-            <p>Email:</p>
-            <input type="text" name="Email" placeholder="example@example.com"><br><br>
-            <input type="submit" name="submit" value="Register">
-            <br><br>
-          </div>
-        </div>
-        <div class="col-md-4"></div>
-      </div>
-
-
+<div class="container-fluid">
+  <div class="row" id="headerColor">
+    <div class="col-md-8"><a href='#/'><img src="images/dc-roasters.png" alt="" /></a></div>
+    <div class="col-md-4" style="text-align: right;">
+      <br><br>
+      <p>Already have an account?<a href="#/login"><button type="button" name="button" class="loginButton">LOG IN</button></a></p>
     </div>
-
-  </body>
-</html>
+  </div>
+  <div class="row" id="headerColor">
+    <nav class="navbar navbar-light bg-faded" id="navigation">
+      <ul class="nav navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/#/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#/options">Options</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#/delivery">Delivery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#/payment">Payment</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class="row" id="box">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <div class="loginBox">
+        <br><br>
+        <p style="font-size: 2em;">Register</p>
+        <p>____________________</p>
+        <p>Username:</p>
+        <input type="text" name="Username" placeholder="Username" ng-model="username"><br>
+        <br><p>Password:</p>
+        <input type="password" name="Password" placeholder="Password" ng-model="password"><br><br>
+        <input type="password" name="Password" placeholder="Confirm Password" ng-model="confirmPassword">
+        <br><br>
+        <p>Email:</p>
+        <input type="email" name="Email" placeholder="example@example.com" ng-model="email"><br><br>
+        <input ng-click="register()" type="submit" name="submit" value="Register">
+        <br><br>
+      </div>
+      <br><br><br><br>
+    </div>
+    <div class="col-md-4"></div>
+  </div>
+</div>
