Added more styling

--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row" id="headerColor">
-    <div class="col-md-12"><img src="images/dc-roasters.png" alt="" /></div>
+    <div class="col-md-12"><img class="logo" src="images/dc-roasters.png" alt="" /></div>
   </div>
-  <div class="row" id="headerColor">
+  <div class="row headerShadow" id="headerColor">
     <nav class="navbar navbar-light bg-faded" id="navigation">
       <ul class="nav navbar-nav">
         <li class="nav-item active">
@@ -21,8 +21,8 @@
     </nav>
   </div>
   <div class="row" >
-    <div class="col-md-12" id="image1">
-      <p>Whole beans in half the time<br>
+    <div class="col-md-12 parent" id="image1">
+      <p class='child'>Whole beans in half the time<br>
       Freshly roasted coffee beans delivered weekly to your door</p>
     </div>
   </div>
@@ -30,9 +30,9 @@
     <div class="col-md-12" id="justColorRows">How it Works</div>
   </div>
   <div class="row">
-    <div class="col-md-12" id="image2">
-      <p style="color: white;">
-        1. We get the coffee<br>
+    <div class="col-md-12 parent" id="image2">
+      <p class='child' style="color: white;">
+        We get the coffee<br>
         Each bean is hand selected<br>
         Each been is measured for precise size<br>
         Each bean is tested for quality
@@ -40,10 +40,10 @@
     </div>
   </div>
   <div class="row" id="justColorRows">
-    <div class="col-md-6"><img class="grower" src="images/grower.jpg" alt="" /></div>
-    <div class="col-md-6">
-      <p>
-        2. We pick up the coffee<br>
+    <div class="col-md-6 parent"><img class="grower child" src="images/grower.jpg" alt="" /></div>
+    <div class="col-md-6 parent">
+      <p class='child'>
+        We pick up the coffee<br>
         We place the coffee in bags<br>
         Each bag is transported in climate-controlled trucks<br>
         Every six hours the bags are rotated to keep the beans uniform and delicious
@@ -51,9 +51,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12" id="image3">
-      <p style="color: white;">
-        3. You drink the coffee<br>
+    <div class="col-md-12 parent" id="image3">
+      <p class='child' style="color: white;">
+        You drink the coffee<br>
         The coffee tastes delicious<br>
         You want more coffee<br>
         You buy more coffee
@@ -62,8 +62,8 @@
   </div>
   <div class="row" id="justColorRows">
     <div class="col-md-12" id="footer">
-      <a href="#/register"><button type="button" name="button">Get Started</button></a><br>
-      Want to know more about us?<br>
+      <a href="#/register"><button type="button" name="button">Get Started by Registering</button></a><br><br><br>
+      Want to know more about us?<br><br>
       <button type="button" name="button">Our Story</button>
     </div>
   </div>
