--- a/frontEnd/options.html
+++ b/frontEnd/options.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row" id="headerColor">
-    <div class="col-md-12"><a href='#/'><img src="images/dc-roasters.png" alt="" /></a></div>
+    <div class="col-md-12"><a href='#/'><img class="logo" src="images/dc-roasters.png" alt="" /></a></div>
   </div>
-  <div class="row" id="headerColor">
+  <div class="row" id="headerShadow">
     <nav class="navbar navbar-light bg-faded" id="navigation">
       <ul class="nav navbar-nav">
         <li class="nav-item active">
