--- a/frontEnd/thankyou.html
+++ b/frontEnd/thankyou.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row" id="headerColor">
-    <div class="col-md-12"><img src="images/dc-roasters.png" alt="" /></div>
+  <div class="row" id="headerShadow">
+    <div class="col-md-12"><a href='#/'><img class="logo" src="images/dc-roasters.png" alt="" /></a></div>
   </div>
 
   <div class="row" id="box">
