--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -10,6 +10,7 @@
     <script src="app.js"></script>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
