--- a/frontEnd/register.html
+++ b/frontEnd/register.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row" id="headerColor">
-    <div class="col-md-8"><a href='#/'><img src="images/dc-roasters.png" alt="" /></a></div>
+    <div class="col-md-8"><a href='#/'><img class="logo" src="images/dc-roasters.png" alt="" /></a></div>
     <div class="col-md-4" style="text-align: right;">
       <br><br>
       <p>Already have an account?<a href="#/login"><button type="button" name="button" class="loginButton">LOG IN</button></a></p>
     </div>
   </div>
-  <div class="row" id="headerColor">
+  <div class="row" id="headerShadow">
     <nav class="navbar navbar-light bg-faded" id="navigation">
       <ul class="nav navbar-nav">
         <li class="nav-item active">
