--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -1,81 +1,75 @@
 <div class="container-fluid">
-  <div class="row" id="headerColor">
-    <div class="col-md-8"><a href='#/'><img class="logo" src="images/dc-roasters.png" alt="" /></a></div>
+  <div class="row" id="headerShadow">
+    <div class="col-md-4">
+      <a href="#/"><img class="logo" src="images/dc-roasters.png" alt="" /></a>
+    </div>
+    <div class="col-md-4 parent2">
+      <div class="navbar navbar-light bg-faded header child2" id="navigation">
+        <ul class="nav navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/#/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/options">Options</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/delivery">Delivery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/payment">Payment</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="col-md-4" style="text-align: right;">
       <br><br>
-      <table>
-        <tr style="height: 50px;">
-          <td>Don't have an account yet?</td>
-          <td style="text-align: right;"><a href="#/register"><button type="button" name="button" class="loginButton">REGISTER</button></a></td>
-        </tr>
-        <tr style="height: 50px;">
-          <td>Already have an account?</td>
-          <td style="text-align: right;"><a href="#/login"><button type="button" name="button" class="loginButton">LOG IN</button></a></td>
-        </tr>
-      </table>
+      <a href="#/register"><button type="button" name="button" class="loginButton">REGISTER</button></a>
+      <a href="#/login"><button type="button" name="button" class="loginButton">LOG IN</button></a>
     </div>
-  </div>
-  <div class="row headerShadow" id="headerColor">
-    <nav class="navbar navbar-light bg-faded" id="navigation">
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/#/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#/options">Options</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#/delivery">Delivery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#/payment">Payment</a>
-        </li>
-      </ul>
-    </nav>
   </div>
   <div class="row" >
     <div class="col-md-12 parent" id="image1">
-      <p class='child'>Whole beans in half the time.<br>
-      Freshly roasted coffee beans delivered weekly to your door.</p>
+      <p class="child">Whole beans in half the time.<br>
+        Freshly roasted coffee beans delivered weekly to your door.</p>
+      </div>
+    </div>
+    <div class="row" id="text">
+      <div class="col-md-12" id="justColorRows">How it Works</div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 parent" id="image2">
+        <p class="child" style="color: white;">
+          We get the coffee.<br>
+          Each bean is hand selected.<br>
+          Each been is measured for precise size.<br>
+          Each bean is tested for quality.
+        </p>
+      </div>
+    </div>
+    <div class="row" id="justColorRows">
+      <div class="col-md-6 parent"><img class="grower child" src="images/grower.jpg" alt="" /></div>
+      <div class="col-md-6 parent">
+        <p class="child">
+          We pick up the coffee.<br>
+          We place the coffee in bags.<br>
+          Each bag is transported in climate-controlled trucks.<br>
+          Every six hours the bags are rotated to keep the beans uniform and delicious.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 parent" id="image3">
+        <p class="child" style="color: white;">
+          You drink the coffee.<br>
+          The coffee tastes delicious.<br>
+          You want more coffee.<br>
+          You buy more coffee.
+        </p>
+      </div>
+    </div>
+    <div class="row" id="justColorRows">
+      <div class="col-md-12" id="footer">
+        <a href="#/register"><button type="button" name="button">Get Started by Registering</button></a><br><br><br>
+      </div>
     </div>
   </div>
-  <div class="row" id="text">
-    <div class="col-md-12" id="justColorRows">How it Works</div>
-  </div>
-  <div class="row">
-    <div class="col-md-12 parent" id="image2">
-      <p class='child' style="color: white;">
-        We get the coffee.<br>
-        Each bean is hand selected.<br>
-        Each been is measured for precise size.<br>
-        Each bean is tested for quality.
-      </p>
-    </div>
-  </div>
-  <div class="row" id="justColorRows">
-    <div class="col-md-6 parent"><img class="grower child" src="images/grower.jpg" alt="" /></div>
-    <div class="col-md-6 parent">
-      <p class='child'>
-        We pick up the coffee.<br>
-        We place the coffee in bags.<br>
-        Each bag is transported in climate-controlled trucks.<br>
-        Every six hours the bags are rotated to keep the beans uniform and delicious.
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12 parent" id="image3">
-      <p class='child' style="color: white;">
-        You drink the coffee.<br>
-        The coffee tastes delicious.<br>
-        You want more coffee.<br>
-        You buy more coffee.
-      </p>
-    </div>
-  </div>
-  <div class="row" id="justColorRows">
-    <div class="col-md-12" id="footer">
-      <a href="#/register"><button type="button" name="button">Get Started by Registering</button></a><br><br><br>
-    </div>
-  </div>
-</div>
