--- a/frontEnd/options.html
+++ b/frontEnd/options.html
@@ -1,24 +1,26 @@
 <div class="container-fluid">
-  <div class="row" id="headerColor">
-    <div class="col-md-12"><a href='#/'><img class="logo" src="images/dc-roasters.png" alt="" /></a></div>
-  </div>
   <div class="row" id="headerShadow">
-    <nav class="navbar navbar-light bg-faded" id="navigation">
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/#/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#/options">Options</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#/delivery">Delivery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#/payment">Payment</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="col-md-4">
+      <a href="#/"><img class="logo" src="images/dc-roasters.png" alt="" /></a>
+    </div>
+    <div class="col-md-8 parent2">
+      <div class="navbar navbar-light bg-faded header child2" id="navigation">
+        <ul class="nav navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/#/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/options">Options</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/delivery">Delivery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/payment">Payment</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
   <br>
   <div class="row">
