Formatted text on home page

--- a/frontEnd/home.html
+++ b/frontEnd/home.html
@@ -23,13 +23,14 @@
     </div>
     <div class="col-md-4" style="text-align: right;">
       <br><br>
-      <a href="#/register"><button type="button" name="button" class="loginButton">REGISTER</button></a>
+      <a href="#/register"><button type="button" name="button" class="loginButton">SIGN UP</button></a>
       <a href="#/login"><button type="button" name="button" class="loginButton">LOG IN</button></a>
     </div>
   </div>
   <div class="row" >
     <div class="col-md-12 parent" id="image1">
-      <p class="child">Whole beans in half the time.<br>
+      <p class="child">
+        <span class="homepageText">Whole beans in half the time.</span><br>
         Freshly roasted coffee beans delivered weekly to your door.</p>
       </div>
     </div>
@@ -39,7 +40,7 @@
     <div class="row">
       <div class="col-md-12 parent" id="image2">
         <p class="child" style="color: white;">
-          We get the coffee.<br>
+          <span class="homepageText">We get the coffee.</span><br>
           Each bean is hand selected.<br>
           Each been is measured for precise size.<br>
           Each bean is tested for quality.
@@ -50,7 +51,7 @@
       <div class="col-md-6 parent"><img class="grower child" src="images/grower.jpg" alt="" /></div>
       <div class="col-md-6 parent">
         <p class="child">
-          We pick up the coffee.<br>
+          <span class="homepageText">We pick up the coffee.</span><br>
           We place the coffee in bags.<br>
           Each bag is transported in climate-controlled trucks.<br>
           Every six hours the bags are rotated to keep the beans uniform and delicious.
@@ -60,7 +61,7 @@
     <div class="row">
       <div class="col-md-12 parent" id="image3">
         <p class="child" style="color: white;">
-          You drink the coffee.<br>
+          <span class="homepageText">You drink the coffee.</span><br>
           The coffee tastes delicious.<br>
           You want more coffee.<br>
           You buy more coffee.
@@ -69,7 +70,7 @@
     </div>
     <div class="row" id="justColorRows">
       <div class="col-md-12" id="footer">
-        <a href="#/register"><button type="button" name="button">Get Started by Registering</button></a><br><br><br>
+        <a href="#/register"><button type="button" name="button">Sign Up Now!</button></a><br><br><br>
       </div>
     </div>
   </div>
